--- a/login.css
+++ b/login.css
@@ -1,10 +1,14 @@
 body {
-background-image:url(登入農場.jpg);
-background-size:2000px 1100px;
-width:1800px;
+margin:0;
+padding:0;
+background: #000 url(登入農場.jpg) center center fixed no-repeat;
+-moz-background-size: cover;
+background-size: cover;
+
 }
 #cont {
-width: 400px;
+width: 25%;
+height: 40%;
 margin: 250px auto;
 border-radius: 100px;
 background-color:#1E90FF;
@@ -12,6 +16,11 @@ padding: 50px;
 color:ivory;
 font-size: 20pt;
 text-align: center;
+}
+#farm{
+margin-top:auto;
+width:100%;
+height:100%;
 }
 #msg {
 font-weight: bold;
