--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 body {
 margin:0;
 padding:0;
-background: #000 url(登入農場.jpg) center center fixed no-repeat;
+background: #000 url(img/登入農場.jpg) center center fixed no-repeat;
 -moz-background-size: cover;
 background-size: cover;
 
