--- a/main.css
+++ b/main.css
@@ -1,12 +1,41 @@
 #plantlist {
     visibility:hidden;
     //可種植列表預設為隱藏
-	position:absolute;top:500px;left:550px;
+	//position:absolute;top:500px;left:600px;
 }
 #shop {
-	position:absolute;top:280px;left:20px;
-	
+	//position:absolute;top:280px;left:20px;
+	//float:left;
+}
+#info{
+    //float:left;
 }
 #ground{
-	position:absolute;top:400px;left:600px;
+	//position:absolute;top:400px;left:600px;
+    //margin:0px auto;
+    float:left;
+    width:60%;
+    margin:10px;
+}
+#land{
+    font-size:16px;
+}
+#logo{
+    height:120px;
+}
+#sidebar{
+    //margin:0px auto;
+    float:left;
+    width:30%;
+    margin:10px;
+}
+#main{
+    text-align:center;
+    width:100%;
+    height:100%;
+}
+#content{
+    margin:0px auto;
+    width:1000px;
+    height:600px;
 }
