--- a/bag.css
+++ b/bag.css
@@ -24,7 +24,8 @@ body/*整體*/
     left:350px;    
     margin-right:500px;
     margin-bottom:10px;
-    background-color:url('農夫(去背過).png');
+    background-image:url(img/櫃子.jpg) ;
+    background-size:100% auto;
 }
 #backmain/*按鈕位置*/
 {
