--- a/main.css
+++ b/main.css
@@ -26,7 +26,11 @@ background-size: cover;
     margin:10px;
 }
 #land{
-    font-size:16px;
+    /*position:relative;
+    left:2px;
+    top:2px;*/
+    font-size:12px;
+    color:#FFF;
 }
 #logo{
     height:120px;
@@ -54,8 +58,35 @@ background-size: cover;
     width:1000px;
 }
 #singleland{
-    width:120px;
+    width:95px;
 }
 #list{
-    width:120px;
+    width:95px;
+}
+#lockedland{
+    background-color: transparent;
+    background-image:url(img/dirt.jpg);
+    //background-image:url(img/lock.png);
+    background-size:95px auto;
+    width:95px ;
+    height:95px;
+}
+#unuse{
+    background-image:url(img/dirt.jpg);
+    background-size:95px auto;
+    width:95px ;
+    height:95px;
+}
+#growing{
+    background-image:url(img/dirt.jpg);
+    background-size:95px auto;
+    width:95px ;
+    height:95px;
+}
+#lland{
+    background-image:url(img/lock.png);
+    background-size:95px auto;
+    width:95px ;
+    height:95px;
+    float:left;
 }
