--- a/main.css
+++ b/main.css
@@ -71,13 +71,7 @@ background-size: cover;
     width:95px ;
     height:95px;
 }
-#unuse{
-    background-image:url(img/dirt.jpg);
-    background-size:95px auto;
-    width:95px ;
-    height:95px;
-}
-#growing{
+#unuse,#growing,#waiting{
     background-image:url(img/dirt.jpg);
     background-size:95px auto;
     width:95px ;
